# beautifulspoon

./: .gitignore  README.md  pyproject.toml
beautifulspoon/: cli.py
