[tool.poetry]
name = "beautifulspoon"
version = "0.0.3"
readme = 'README.md'
description = ""
authors = ["Gongziting Tech Ltd."]
license = "MIT"
homepage = "https://github.com/gzttech/beautifulspoon"

[tool.poetry.scripts]
beautifulspoon = 'beautifulspoon.cli:main'
bspoon = 'beautifulspoon.cli:main'

[tool.poetry.dependencies]
python = "^3.6.8"
beautifulsoup4 = "^4.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
